--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 Django==1.6.2
+Pillow==2.3.1
+South==0.8.4
 argparse==1.2.1
-dj-database-url==0.2.2
+dj-database-url==0.3.0
 dj-static==0.0.5
+django-guardian==1.2.0
 django-toolbelt==0.0.1
+django-userena==1.3.0
+easy-thumbnails==1.5
 gunicorn==18.0
+html2text==3.200.3
 psycopg2==2.5.2
 pystache==0.5.3
+six==1.6.1
 static==1.0.2
 wsgiref==0.1.2
