--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
 Django==1.6.2
+Markdown==2.4
 Pillow==2.3.1
+PyYAML==3.11
 South==0.8.4
 argparse==1.2.1
+defusedxml==0.4.1
 dj-database-url==0.3.0
 dj-static==0.0.5
+django-filter==0.7
 django-guardian==1.2.0
+django-oauth-plus==2.2.4
+django-oauth2-provider==0.2.6
 django-toolbelt==0.0.1
 django-userena==1.3.0
+djangorestframework==2.3.13
 easy-thumbnails==1.5
 gunicorn==18.0
 html2text==3.200.3
+httplib2==0.8
+oauth2==1.5.211
 psycopg2==2.5.2
 pystache==0.5.3
+shortuuid==0.4
 six==1.6.1
 static==1.0.2
 wsgiref==0.1.2
