preparando envio de comentarios/publicaciones

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//publications/forms.py=utf-8
 encoding//skyfolk/settings.py=utf-8
 encoding//skyfolk/urls.py=utf-8
+encoding//user_profile/forms.py=utf-8
 encoding/<project>=UTF-8
