--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//publications/forms.py=utf-8
+encoding//publications/models.py=utf-8
 encoding//skyfolk/settings.py=utf-8
 encoding//skyfolk/urls.py=utf-8
 encoding//user_profile/forms.py=utf-8
