Corregidos templates mensajes privados

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 venv
 *.pyc
+*.py~
 .project
 .pydevproject
 skyfolk/media/*
 skyfolk.sublime-project
 skyfolk.sublime-workspace
+build/
+.settings/
