--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-oauth-plus==2.2.4
 django-oauth2-provider==0.2.6
 django-toolbelt==0.0.1
 djangorestframework==2.3.13
+django-partial-page
 gunicorn==18.0
 httplib2==0.8
 oauth2==1.5.211
