--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,25 +28,48 @@ services:
   redis:
     image: redis:4.0
     hostname: redis
+    
   # elasticsearch
   elasticsearch1:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.2
     container_name: elasticsearch1
-    environmenit:
-        - cluster.name=docker-cluster
-        - bootstrap.memory_lock=true
-        - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
+      - cluster.routing.allocation.disk.threshold_enabled=false
     ulimits:
-        memlock:
-            soft: -1
-            hard: -1
+      memlock:
+        soft: -1
+        hard: -1
     mem_limit: 1g
     volumes:
-        - esdata1:/usr/share/elasticsearch/data
+      - esdata1:/usr/share/elasticsearch/data
     ports:
-        - 9200:9200
+      - 9200:9200
     networks:
-        - esnet
+      - esnet
+
+  elasticsearch2:
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.6.2
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
+      - cluster.routing.allocation.disk.threshold_enabled=false
+      - "discovery.zen.ping.unicast.hosts=elasticsearch1"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    mem_limit: 1g
+    volumes:
+      - esdata2:/usr/share/elasticsearch/data
+    networks:
+      - esnet
+
   # RabbitMQ
   rabbit:
     hostname: rabbit
@@ -54,7 +77,7 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
-      - RABBIT_ENV_VHOST=celery
+      - RABBITMQ_ERLANG_COOKIE='secret_cookie' 
     ports:
       - "5672:5672"  # we forward this port because it's useful for debugging
       - "15672:15672"  # here, we can access rabbitmq management plugin
@@ -72,7 +95,6 @@ services:
       - .:/app  # mount current directory inside container
     ports:
       - "8000:8000"
-    # set up links so that web knows about db, rabbit and redis
     links:
       - db
       - rabbit
@@ -81,20 +103,13 @@ services:
       - db
       - neo4j
       - elasticsearch1
+      - elasticsearch2
+  
+volumes:
+  esdata1:
+    driver: local
+  esdata2:
+    driver: local
 
-  # Celery worker
-  worker:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    command: ./run_celery.sh
-    volumes:
-      - .:/app
-    links:
-      - db
-      - rabbit
-      - redis
-    depends_on:
-      - rabbit
-      - web
-
+networks:
+  esnet:
