--- a/docker-compose-pre.yml
+++ b/docker-compose-pre.yml
@@ -1,17 +1,20 @@
-version: '2'
+version: '3'
 
 services:   
   nginx:
-    image: nginx:latest
-    container_name: ng01
+    image: nginx
     ports:
-      - "8000:8000"
+      - "80:80"
     volumes:
       - .:/code
       - /tmp:/tmp
       - ./config/nginx:/etc/nginx/conf.d
+    environment:
+      - NGINX_PORT=80
     depends_on:
       - web
+    networks:
+      - webnet
   # PostgreSQL database
   db:
     image: postgres:9.6.5
@@ -145,6 +148,8 @@ services:
       - webnet
     depends_on:
       - web
+      - db
+      - neo4j
     restart: always
   celery_beat:
     env_file:
@@ -160,6 +165,8 @@ services:
       - webnet
     depends_on:
       - web
+      - db
+      - neo4j
     restart: always
 
 volumes:
