--- a/skyfolk-react/package.json
+++ b/skyfolk-react/package.json
@@ -3,14 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "browserify": "^14.5.0",
+    "history": "^4.7.2",
+    "lodash": "^4.17.4",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.5.0",
+    "redux-router": "^1.0.0-beta3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "react-scripts": "1.0.7"
   },
   "scripts": {
