+ README.md actualizado, + requeriments actualizados

--- a/skyfolk/.env
+++ b/skyfolk/.env
@@ -1,14 +1,14 @@
 DJANGO_TH_PAGINATE_BY=5
-DJANGO_TH_PUBLISHING_LIMIT=2
-DJANGO_TH_PROCESSES=1
+DJANGO_TH_PUBLISHING_LIMIT=3
+DJANGO_TH_PROCESSES=2
 DJANGO_TH_FAILED_TRIES=2
 DJANGO_TH_FIRE=True
 DJANGO_TH_DIGEST_EVENT=False
 DJANGO_TH_SHARING_MEDIA=True
 
-TH_EVERNOTE_SANDBOX=True
-TH_EVERNOTE_CONSUMER_KEY=adriancarayol-0900
-TH_EVERNOTE_CONSUMER_SECRET=2d24e00bfc0ba4af
+TH_EVERNOTE_SANDBOX=False
+TH_EVERNOTE_CONSUMER_KEY=adriancarayol-9978
+TH_EVERNOTE_CONSUMER_SECRET=55a5168b84b97faa
 
 TH_GITHUB_USERNAME=
 TH_GITHUB_PASSWORD=
@@ -34,6 +34,6 @@ TH_TWITTER_CONSUMER_SECRET=lew1qe3oiDC8pkIYVCm2uZR17nKreUBcGt97uaUOMBbunvDFWz
 
 TH_PELICAN_AUTHOR=
 
-TH_REDDIT_CLIENT_ID=g65E5BrtFu-coQ
-TH_REDDIT_CLIENT_SECRET=Jowvv8YkrARYks0avaeDxW-4dzU
-TH_REDDIT_USER_AGENT=Skyfolk:0.0.1 (by /u/polestation)
+TH_REDDIT_CLIENT_ID=RlIvjcZtlgvblA
+TH_REDDIT_CLIENT_SECRET=q2NV7-FaQbqx82Ut7lbpT5C-POs
+TH_REDDIT_USER_AGENT=Skyfolk:0.0.1 (by /u/skyfolk_ES)
