--- a/web-variables.env
+++ b/web-variables.env
@@ -1,1 +1,5 @@
 DJANGO_SETTINGS_MODULE=skyfolk.settings.develop
+REDIS_PORT_6379_TCP_ADDR=redis
+RABBIT_PORT_5672_TCP=rabbit
+ELASTICSEARCH_URL=elasticsearch1
+NEO4J_BOLT_URL=bolt://neo4j:1518@cluster:7687
