--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,21 @@
 venv
-venv/
 *.pyc
 .project
 .pydevproject
 skyfolk/media/
-avatars/
+avatars
 whoosh_index/
 skyfolk.sublime-project
 skyfolk.sublime-workspace
 build/
 .settings/
-.idea/
-skyfolk/media
+.idea
 Thumbs.db
 db.sqlite3
 .ropeproject/
 .externalToolBuilders/
 .metadata/
-.vscode/
+.vscode
 Web.config
 
 # vi temp files
@@ -26,12 +24,11 @@ Web.config
 *.swo
 celerybeat-schedule
 celerybeat.pid
-geckodriver.log
 # docker files
 esdata/
 db/
 kibana/
 tmp/
-celerybeat.pid
-./static/
+static/
 *.log
+publications/tests/tests.py
