+ Preparando docker para pre

--- a/config/skyfolk.conf
+++ b/config/skyfolk.conf
@@ -1,10 +1,15 @@
 upstream web {  
-    ip_hash;
-    server web:8000;
+  ip_hash;
+  server web:8000;
 }
 
-# portal
-server {  
+server {
+
+    location /static/ {    
+        autoindex on;    
+        alias /static/; 
+    }
+
     location / {
         proxy_pass http://web/;
     }
