--- a/web-pre-variables.env
+++ b/web-pre-variables.env
@@ -3,3 +3,8 @@ REDIS_PORT_6379_TCP_ADDR=redis
 RABBIT_PORT_5672_TCP=rabbit
 ELASTICSEARCH_URL=elasticsearch1
 NEO4J_BOLT_URL=bolt://neo4j:1518@cluster:7687
+DB_ENV_DB=skyfolk_pre_db
+DB_ENV_POSTGRES_USER=skyfolk_pre
+DB_ENV_POSTGRES_PASSWORD=gDFgg$G=4h_%H
+DB_PORT_5432_TCP_ADDR=cluster
+DB_PORT_5432_TCP_PORT=5432
