--- a/config/skyfolk.conf
+++ b/config/skyfolk.conf
@@ -1,9 +1,11 @@
 upstream web {  
-  ip_hash;
-  server web:8000;
+    ip_hash;
+    server web:8000; 
 }
 
 server {
+    charset utf-8;
+    client_max_body_size 20M;
 
     location /static/ {    
         autoindex on;    
@@ -12,7 +14,16 @@ server {
 
     location / {
         proxy_pass http://web/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
     }
     listen 8000;
+
     server_name localhost;
 }
