+ Docker configurado para enviar por email a través del host

--- a/web-pre-variables.env
+++ b/web-pre-variables.env
@@ -8,3 +8,4 @@ DB_ENV_POSTGRES_USER=skyfolk_pre
 DB_ENV_POSTGRES_PASSWORD=gDFgg$G=4h_%H
 DB_PORT_5432_TCP_ADDR=cluster
 DB_PORT_5432_TCP_PORT=5432
+EMAIL_HOST=cluster
