--- a/web-variables.env
+++ b/web-variables.env
@@ -3,3 +3,4 @@ REDIS_PORT_6379_TCP_ADDR=redis
 RABBIT_PORT_5672_TCP=rabbit
 ELASTICSEARCH_URL=elasticsearch1
 NEO4J_BOLT_URL=bolt://neo4j:1518@cluster:7687
+EMAIL_HOST=cluster
