+ Docker-pre listo

--- a/config/skyfolk.conf
+++ b/config/skyfolk.conf
@@ -9,7 +9,12 @@ server {
 
     location /static/ {    
         autoindex on;    
-        alias /static/; 
+        alias /var/www/skyfolk.net/run/static/static/;
+    }
+
+    location /media/ {
+        autoindex on;
+        alias /var/www/skyfolk.net/run/static/media/;
     }
 
     location / {
