--- a/docker-compose-pre.yml
+++ b/docker-compose-pre.yml
@@ -1,35 +1,6 @@
 version: '2'
 
 services:    
-  mail:
-    image: tvial/docker-mailserver:latest
-    hostname: mail
-    domainname: skyfolk.net
-    container_name: mail
-    restart: always
-    networks:
-      - webnet
-    ports:
-      - "25:25"
-      - "143:143"
-      - "587:587"
-      - "993:993"
-    volumes:
-      - maildata:/var/mail
-      - mailstate:/var/mail-state
-      - ./config/config/:/tmp/docker-mailserver/
-    environment:
-      - SMTP_ONLY=0
-      - ENABLE_SPAMASSASSIN=1
-      - ENABLE_CLAMAV=1
-      - ENABLE_FAIL2BAN=1
-      - ENABLE_POSTGREY=1
-      - ONE_DIR=1
-      - DMS_DEBUG=0
-    cap_add:
-      - NET_ADMIN
-      - SYS_PTRACE
-
   # nginx
   nginx:
     image: nginx:latest
@@ -42,6 +13,8 @@ services:
         - ./config:/etc/nginx/conf.d
         - ./skyfolk/static:/static
         - /tmp:/tmp
+        - /var/www/skyfolk.net/run/static/static/:/var/www/skyfolk.net/run/static/static/
+        - /var/www/skyfolk.net/run/static/media/:/var/www/skyfolk.net/run/static/media/
     depends_on:
         - web
         - webworker
@@ -104,6 +77,8 @@ services:
     volumes:
       - .:/code
       - /tmp:/tmp
+      - /var/www/skyfolk.net/run/static/static/:/var/www/skyfolk.net/run/static/static/
+      - /var/www/skyfolk.net/run/static/media/:/var/www/skyfolk.net/run/static/media/
     command: ./run_worker.sh
     env_file:
       - web-pre-variables.env
@@ -127,6 +102,8 @@ services:
       - .:/code  # mount current directory inside container
       - /tmp:/tmp
       - ./skyfolk/static:/static
+      - /var/www/skyfolk.net/run/static/static/:/var/www/skyfolk.net/run/static/static/
+      - /var/www/skyfolk.net/run/static/media/:/var/www/skyfolk.net/run/static/media/
     expose:
         - "8000"
     networks:
@@ -149,6 +126,8 @@ services:
     volumes:
       - .:/code
       - /tmp:/tmp
+      - /var/www/skyfolk.net/run/static/static/:/var/www/skyfolk.net/run/static/static/
+      - /var/www/skyfolk.net/run/static/media/:/var/www/skyfolk.net/run/static/media/
     networks:
       - webnet
     depends_on:
@@ -166,6 +145,8 @@ services:
     volumes:
       - .:/code
       - /tmp:/tmp
+      - /var/www/skyfolk.net/run/static/static/:/var/www/skyfolk.net/run/static/static/
+      - /var/www/skyfolk.net/run/static/media/:/var/www/skyfolk.net/run/static/media/
     networks:
       - webnet
     depends_on:
@@ -173,13 +154,6 @@ services:
     restart: always
     extra_hosts:
         - "cluster:172.17.0.1"
-
-
-volumes:
-  maildata:
-    driver: local
-  mailstate:
-    driver: local
 
 networks:
   webnet:
