--- a/docker-compose-pre.yml
+++ b/docker-compose-pre.yml
@@ -79,7 +79,7 @@ services:
       - /tmp:/tmp
       - /var/www/skyfolk.net/run/static/static/:/var/www/skyfolk.net/run/static/static/
       - /var/www/skyfolk.net/run/static/media/:/var/www/skyfolk.net/run/static/media/
-    command: ./run_worker.sh
+    command: ./run_worker_pre.sh
     env_file:
       - web-pre-variables.env
     networks:
@@ -97,7 +97,7 @@ services:
       context: .
       dockerfile: Dockerfile
     hostname: web
-    command: ./run_web.sh
+    command: ./run_web_pre.sh
     volumes:
       - .:/code  # mount current directory inside container
       - /tmp:/tmp
