+ Tests unitarios para follow

--- a/Pipfile
+++ b/Pipfile
@@ -4,134 +4,139 @@ name = "pypi"
 verify_ssl = true
 url = "https://pypi.python.org/simple"
 
-[requires]
-python_version = '3.6'
-
-[packages.Twisted]
-extras = [ "tls", "http2" ]
 
 [packages]
-django = "==1.11.10"
-amqp = "==2.2.2"
-appdirs = "==1.4.3"
-asgi-redis = "==1.4.3"
-asgi_rabbitmq = "==0.5.4"
-asgiref = "==1.1.2"
-autobahn = "==17.8.1"
-beautifulsoup4 = "==4.6.0"
-billiard = "==3.5.0.3"
-bleach = "==2.1.1"
-celery = "==4.1.0"
-channels = "==1.1.8"
-click = "==6.7"
-constantly = "==15.1.0"
-daphne = "==1.3.0"
-decorator = "==4.0.11"
-defusedxml = "==0.4.1"
-django-allauth = "==0.35.0"
-django-appconf = "==1.0.2"
-django-autoslug = "==1.9.3"
-django-celery-results = "==1.0.1"
-django-el-pagination = "==3.1.0"
-django-extensions = "==1.9.0"
-django-localeurl = "*"
-django-model-utils = "==3.0.0"
-django-slim = "==0.7.5"
-django-sortedm2m = "==1.5.0"
-django-taggit = "==0.22.1"
-django-tinymce = "==2.6.0"
-djangorestframework = "==3.7.3"
-easy-thumbnails = "==2.4.1"
-ExifRead = "==2.1.2"
-feedparser = "==5.2.1"
-futures = "==3.1.1"
+
 gunicorn = "==19.7.1"
-html5lib = "==1.0b10"
-incremental = "==17.5.0"
-jsonfield = "==2.0.2"
-kombu = "==4.1.0"
-lorem-ipsum-generator = "==0.3"
-msgpack-python = "==0.4.8"
-oauthlib = "==2.0.2"
-olefile = "==0.44"
-ordereddict = "==1.1"
-packaging = "==16.8"
-"path.py" = "==10.3.1"
-pexpect = "==4.2.1"
-pickleshare = "==0.7.4"
-pika = "==0.11.0"
-Pillow = "==4.3.0"
-prompt-toolkit = "==1.0.10"
-psycopg2 = "==2.7.3.1"
-ptyprocess = "==0.5.2"
-Pygments = "==2.2.0"
-pyparsing = "==2.2.0"
-python-dateutil = "==2.6.1"
-python3-openid = "==3.1.0"
-redis = "==2.10.6"
-requests = "==2.18.4"
-requests-oauthlib = "==0.8.0"
-selenium = "==3.5.0"
-simplegeneric = "==0.8.1"
-six = "==1.10.0"
-sockjs-tornado = "==1.0.3"
-tornado = "==4.5.2"
-tornado-redis = "==2.4.18"
-traitlets = "==4.3.2"
+django-celery-results = "==1.0.1"
+django-allauth = "==0.35.0"
 transliterate = "==1.10"
-txaio = "==2.8.2"
-Unidecode = "==0.04.21"
-PyTumblr = "==0.0.7"
-pytz = "==2017.3"
-evernote3 = "==1.25.12"
-django-redis = "==4.8.0"
-django-js-reverse = "==0.7.3"
-django-formtools = "==2.1"
-django-environ = "==0.4.4"
-awesome-slugify = "==1.6.5"
-arrow = "==0.10.0"
-django-nine = "*"
-vine = "==1.1.4"
-vishap = "==0.1.5"
-wcwidth = "==0.1.7"
-Werkzeug = "==0.12.2"
-"zope.interface" = "==4.4.3"
-django-mptt = ">=0.8.7"
-django_neomodel = "*"
-python-memcached = "*"
-filedepot = "*"
-django-ipware = "*"
-django_compressor = "*"
-boto3 = "==1.4.7"
-django-cors-headers = "*"
-django-embed-video = "*"
-django-storages = "*"
-django-guardian = "*"
-python-magic = "*"
-moviepy = "*"
-django-debug-toolbar = "*"
-django-haystack = "==2.6.1"
-elasticsearch = "==5.4.0"
-urllib3 = "==1.22"
-Whoosh = "==2.7.4"
-django-celery-beat = ">=1.0.1"
-django-invitations = "*"
-django-webpack-loader = "*"
-todoist-python = "==7.0.17"
 py-trello = "==0.9.0"
-pypandoc = "==1.4"
-python-taiga = "==0.8.6"
-pytidylib = "==0.3.2"
-wallabag_api = "==1.2.0"
-twython = "==3.6.0"
-"github3.py" = "==1.0.0a4"
-instapush = "==0.1.2"
-"Mastodon.py" = "==1.1.1"
-pocket = "*"
+wallabag-api = "==1.2.0"
+lorem-ipsum-generator = "==0.3"
+"html5lib" = "==1.0b10"
+click = "==6.7"
+six = "==1.10.0"
+django-celery-beat = ">=1.0.1"
+django-js-reverse = "==0.7.3"
+incremental = "==17.5.0"
+tornado = "==4.5.2"
+decorator = "==4.0.11"
+whoosh = "==2.7.4"
+"django-sortedm2m" = "==1.5.0"
+ptyprocess = "==0.5.2"
+django-model-utils = "==3.0.0"
+django-haystack = "==2.6.1"
 praw = "==5.3.0"
-"pushbullet.py" = "==0.11.0"
+billiard = "==3.5.0.3"
+futures = "==3.1.1"
+feedparser = "==5.2.1"
+django-ipware = "*"
+olefile = "==0.44"
+django-guardian = "*"
+vine = "==1.1.4"
+"python3-openid" = "==3.1.0"
+exifread = "==2.1.2"
+simplegeneric = "==0.8.1"
+oauthlib = "==2.0.2"
+djangorestframework = "==3.7.3"
+django-neomodel = "*"
+arrow = "==0.10.0"
+bleach = "==2.1.1"
+pytz = "==2017.3"
+"urllib3" = "==1.22"
+"beautifulsoup4" = "==4.6.0"
+asgi-redis = "==1.4.3"
+"zope.interface" = "==4.4.3"
+pyparsing = "==2.2.0"
+celery = "==4.1.0"
+selenium = "==3.5.0"
+requests-oauthlib = "==0.8.0"
+msgpack-python = "==0.4.8"
+autobahn = "==17.8.1"
+tornado-redis = "==2.4.18"
+jsonfield = "==2.0.2"
+django-taggit = "==0.22.1"
+"path.py" = "==10.3.1"
+werkzeug = "==0.12.2"
+django-nine = "*"
+django-extensions = "==1.9.0"
+django-invitations = "*"
+ordereddict = "==1.1"
+constantly = "==15.1.0"
+django-appconf = "==1.0.2"
+django-embed-video = "*"
+pickleshare = "==0.7.4"
+django-tinymce = "==2.6.0"
+"github3.py" = "==1.0.0a4"
+moviepy = "*"
+easy-thumbnails = "==2.4.1"
+pytidylib = "==0.3.2"
+todoist-python = "==7.0.17"
+pygments = "==2.2.0"
+twisted = { extras = [ "tls", "http2",] }
+filedepot = "*"
+django-el-pagination = "==3.1.0"
+"mastodon.py" = "==1.1.1"
+appdirs = "==1.4.3"
+awesome-slugify = "==1.6.5"
+channels = "==1.1.8"
+"psycopg2" = "==2.7.3.1"
+asgi-rabbitmq = "==0.5.4"
+pexpect = "==4.2.1"
+django-redis = "==4.8.0"
+daphne = "==1.3.0"
+wcwidth = "==0.1.7"
+django-autoslug = "==1.9.3"
+defusedxml = "==0.4.1"
+django-compressor = "*"
+django-cors-headers = "*"
+sockjs-tornado = "==1.0.3"
+elasticsearch = "==5.4.0"
+packaging = "==16.8"
+python-memcached = "*"
+unidecode = "==0.04.21"
 pif = "*"
+kombu = "==4.1.0"
+django-mptt = ">=0.8.7"
+django-slim = "==0.7.5"
+requests = "==2.18.4"
+django-debug-toolbar = "*"
+pillow = "==4.3.0"
+pika = "==0.11.0"
+txaio = "==2.8.2"
+prompt-toolkit = "==1.0.10"
+pocket = "*"
+python-dateutil = "==2.6.1"
+"pushbullet.py" = "==0.11.0"
+"boto3" = "==1.4.7"
+asgiref = "==1.1.2"
+traitlets = "==4.3.2"
+redis = "==2.10.6"
+"evernote3" = "==1.25.12"
+python-taiga = "==0.8.6"
+django = "==1.11.10"
+vishap = "==0.1.5"
+django-storages = "*"
+twython = "==3.6.0"
+pypandoc = "==1.4"
+django-environ = "==0.4.4"
+django-formtools = "==2.1"
+django-webpack-loader = "*"
+amqp = "==2.2.2"
+django-localeurl = "*"
+pytumblr = "==0.0.7"
+instapush = "==0.1.2"
+python-magic = "*"
+
+
 [dev-packages]
-ipdb = "*"
+
 backports-abc = "*"
+ipdb = "*"
 "backports.shutil-get-terminal-size" = "*"
+
+
+[requires]
+
+python_version = "3.6"
