--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,27 @@ services:
       - NEO4J_AUTH=neo4j/1518
     volumes:
       - ./db/dbms:/data/dbms
+    restart: always
     networks:
       - webnet
+    depends_on:
+      - dbpostgres
+
+  # postgresql
+  dbpostgres:
+    image: postgres:latest
+    volumes:
+      - /private/var/lib/postgresql:/var/lib/postgresql
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=skyfolk
+      - POSTGRES_PASSWORD=skyfolk_password
+      - POSTGRES_DB=skyfolk_db
+    networks:
+      - webnet
+
   # elasticsearch
   elasticsearch:
     image: elasticsearch:2.4.6
@@ -33,6 +52,7 @@ services:
     networks:
       - webnet
 
+  # kibana
   kibana:
     image: kibana:4.6.0
     ports:
@@ -59,6 +79,7 @@ services:
     restart: always
     networks:
       - webnet
+      
   # nodo 2
   rabbit_2:
     hostname: rabbit_2
@@ -88,6 +109,7 @@ services:
       - webnet
     depends_on:
       - rabbit
+      - web
     restart: always
 
   # Django web server
@@ -108,6 +130,8 @@ services:
       - webnet
     depends_on:
       - rabbit
+      - neo4j
+      - dbpostgres
     networks:
       - webnet
     restart: always
