--- a/web-variables.env
+++ b/web-variables.env
@@ -3,3 +3,8 @@ REDIS_PORT_6379_TCP_ADDR=redis
 RABBIT_PORT_5672_TCP=rabbit
 ELASTICSEARCH_URL=elasticsearch1
 NEO4J_BOLT_URL=bolt://neo4j:1518@neo4j:7687
+DB_ENV_DB=skyfolk_db
+DB_ENV_POSTGRES_USER=skyfolk
+DB_ENV_POSTGRES_PASSWORD=skyfolk_password
+DB_PORT_5432_TCP_ADDR=dbpostgres
+DB_PORT_5432_TCP_PORT=5432
