--- a/web-variables.env
+++ b/web-variables.env
@@ -3,6 +3,9 @@ REDIS_PORT_6379_TCP_ADDR=redis
 RABBIT_PORT_5672_TCP=rabbit
 ELASTICSEARCH_URL=elasticsearch1
 NEO4J_BOLT_URL=bolt://neo4j:1518@neo4j:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=1518
+NEO4J_HOST=neo4j
 DB_ENV_DB=skyfolk_db
 DB_ENV_POSTGRES_USER=skyfolk
 DB_ENV_POSTGRES_PASSWORD=skyfolk_password
